--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
     <div id="nav-bar-container">
       <ul id="nav-bar">
-        <li><a href="">Home</a></li>
-        <li><a href="">Photo Gallery</a></li>      </ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./gallery.html">Photo Gallery</a></li>
+      </ul>
     </div>
   </header>
 
