add kangaroo creek photos

--- a/gallery.html
+++ b/gallery.html
@@ -33,6 +33,25 @@
   <!-- Main Body -->
   <div id="body">
 
+    <!-- Gallery -->
+    <div id="kangaroo-creek" class="gallery-container">
+      <h3>Kangaroo Creek Reservoir Lookout</h3>
+      <div class="gallery">
+        <div class="img-container">
+          <img src="./resources/images/kangaroo creek/driver side wheel.jpg">
+        </div>
+        <div class="img-container">
+          <img src="./resources/images/kangaroo creek/front.jpg">
+        </div>
+        <div class="img-container">
+          <img src="./resources/images/kangaroo creek/wheel.jpg">
+        </div>
+        <div class="img-container">
+          <img src="./resources/images/kangaroo creek/wheel closeup.jpg">
+        </div>
+      </div>
+    </div>
+
     <!-- Footer -->
     <footer>
       <span class="left">
