fixed file locations

--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
   <!-- Header -->
   <header>
     <div id="logo-container">
-      <img src="../../Instagram/logo/logo - moonlit motors.png">
+      <img src="./resources/images/logo/logo - moonlit motors.png">
     </div>
 
     <div id="nav-bar-container">
