--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Header -->
   <header>
     <div id="logo-container">
-      <img src="../../Instagram/logo/logo - moonlit motors.png">
+      <img src="./resources/images/logo/logo - moonlit motors.png">
     </div>
 
     <div id="nav-bar-container">
@@ -36,7 +36,7 @@
     <!-- About -->
     <div id="about">
       <div id="about-left">
-        <img src="../../Photos/front.jpg">
+        <img src="./resources/images/kangaroo creek/front.jpg">
       </div>
 
       <div id="about-right">
