add tofu shop photos to site

--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,8 @@
   <div id="body">
 
     <!-- Gallery -->
-    <div id="kangaroo-creek" class="gallery-container">
+    <!-- Kangaroo Creek Reservoir Lookout -->
+    <div class="gallery-container">
       <h3>Kangaroo Creek Reservoir Lookout</h3>
       <div class="gallery">
         <div class="img-container">
@@ -48,6 +49,28 @@
         </div>
         <div class="img-container">
           <img src="./resources/images/kangaroo creek/wheel closeup.jpg">
+        </div>
+      </div>
+    </div>
+
+    <!-- Fujiwara Tofu Shop -->
+    <div class="gallery-container">
+      <h3>Fujiwara Tofu Shop</h3>
+      <div class="gallery">
+        <div class="img-container">
+          <img src="./resources/images/fujiwara tofu shop/front tilted.jpg">
+        </div>
+        <div class="img-container">
+          <img src="./resources/images/fujiwara tofu shop/side closeup.jpg">
+        </div>
+        <div class="img-container">
+          <img src="./resources/images/fujiwara tofu shop/wing mirror reflection.jpg">
+        </div>
+        <div class="img-container">
+          <img src="./resources/images/fujiwara tofu shop/side mid shot.jpg">
+        </div>
+        <div class="img-container">
+          <img src="./resources/images/fujiwara tofu shop/wheel closeup.jpg">
         </div>
       </div>
     </div>
