finish tofu shop

--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,7 @@
     </div>
 
     <!-- Fujiwara Tofu Shop -->
-    <div class="gallery-container">
+    <div class="gallery-container gallery-container-bottom">
       <h3>Fujiwara Tofu Shop</h3>
       <div class="gallery">
         <div class="img-container">
